# PyCalc

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  main_light.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
pycalc/: __init__.py  dna.py  dna2.py  general.py  n_base.py  rna.py  units.py
tests/: test_dna2.py  test_general.py  tests_pycalc.py
tests/tests_pycalc/: tests_dna.py
