[tool.poetry]
name = "pycalc"
version = "0.1.0"
description = "A personal calculator"
authors = ["CodingLooHee <pitchanun2003@gmail.com>"]
license = "MIT"
packages = [
    { include = "pycalc"},
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
matplotlib = ">=3.5"
pandas = ">=1.3"
numpy = ">=1.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
